# marketing_poster_hypod

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  fix_campaign_custom_idea.py  patch_all_prompts.py  patch_all_prompts_unique.py  patch_custom_idea.py  patch_custom_idea_final.py  patch_custom_idea_strict.py  patch_sales_poster.py  patch_size_and_font.py  patch_system_context.py  patch_uniqueness_logic.py  patch_video_gen.py  test_veo_args.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/agents/: base.py  callbacks.py  registry.py  state.py
backend/agents/campaign/: graph.py  prompts.py
backend/agents/carousel/: graph.py  prompts.py
backend/agents/motion_graphics/: graph.py  prompts.py
backend/agents/product_video/: graph.py  prompts.py
backend/agents/quick_image/: graph.py  prompts.py
backend/agents/sales_poster/: graph.py  prompts.py
backend/agents/single_post/: graph.py  prompts.py
backend/agents/sub_agents/: campaign_planner.py  idea_recommender.py  prompt_creator.py  slide_planner.py
backend/agents/tools/: animate_image.py  calendar.py  caption.py  format_response.py  hashtag.py  image_gen.py  video_gen.py  web_search.py
backend/app/: config.py  database.py  main.py
backend/app/models/: brand.py  session.py  usage.py
backend/app/schemas/: brand.py  chat.py  session.py
backend/app/security/: dependencies.py  models.py  token_util.py
backend/app/services/: streaming.py  (+2 more)
backend/brand/: colors.py  context.py
backend/migrations/: env.py
backend/tests/: conftest.py
(+40 files in other folders)
